@@ -1,3 +1,9 @@
+2004-03-15  Julien MOUTTE <julien@moutte.net>
+
+	* gst-libs/gst/play/play.c: (gst_play_get_framerate),
+	(gst_play_get_sink_element): First draft of gst_play_get_framerate.
+	* gst-libs/gst/play/play.h:
+
 2004-03-15  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* *.c, *.cc: don't mix tabs and spaces
